fixed overflow issue on the right side of the page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,6 +46,11 @@
 body {
   background-color: RGBA(44, 46, 54, 1);
   font-family: "Montserrat", sans-serif;
+  width: 100%;
+  /*height: 100%;*/
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 hr {
   width: 45%;
@@ -59,6 +64,11 @@ footer {
 }
 html {
   font-size: 100%;
+  width: 100%;
+  /*height: 100%;*/
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 .picture {
   width: 35%;
@@ -247,15 +257,16 @@ i {
 }
 
 .image-frame {
-  overflow: hidden;
+  overflow: hidden !important;
   /*background-color: red;*/
   height: 188px;
-  width: 188px;
+  width: 188px !important;
   position: relative;
   top: 30px;
   border-radius: 50%;
   display: block;
   margin: 0 auto;
+  padding: auto;
   text-align: center;
 }
 
